# deep-prae-journal

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_all_examples.py  setup.py  setup_env.sh
deepprae/: __init__.py
deepprae/configs/: __init__.py  experiment_configs.py
deepprae/core/: __init__.py  algorithm.py  estimation.py  networks.py  optimization.py  sampling.py
deepprae/experiments/: __init__.py  example1_2d_sigmoid.py  example2_ball_complement.py  example3_random_walk.py  example4_non_gaussian.py  example5_hole.py  example6_intelligent_driving.py
deepprae/utils/: __init__.py  dummy_results.py  plotting.py
results/: example1_results_20260323_131750.json  example2_results_20260323_152456.json  example3_results_20260323_135835.json  example5_results_20260323_144138.json  example6_results_20260323_163253.json
